--- a/package.json
+++ b/package.json
@@ -51,9 +51,16 @@
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write" 
+    ]
+  }
 }
